# lexical-sae

./: .gitignore  ANALYSIS.md  CLAUDE.md  LITERATURE_REVIEW.md  README.md  SPALF_methodology.md  pyproject.toml  reproduce_results.sh  requirements.txt  setup.py
cajt/: __init__.py  config.py  data.py  inference.py  runtime.py
cajt/baselines/: __init__.py  common.py  dense.py  sae.py  transcoder.py
cajt/core/: __init__.py  attribution.py  constants.py  model.py  types.py
cajt/evaluation/: __init__.py  autointerp.py  baselines.py  circuit_metrics.py  collect.py  disentanglement.py  downstream_loss.py  eraser.py  feature_absorption.py  layerwise.py  mib_metrics.py  orchestrator.py  polysemy.py  results.py  sparse_probing.py  sparsity_frontier.py
cajt/intervention/: __init__.py  analysis.py  (+2 more)
configs/: default.yaml  gemma2_9b.yaml  llama3_8b.yaml  pythia_1b.yaml
experiments/: civilcomments.yaml  long_context.yaml  surgery.yaml  verify.yaml  verify_ablation.yaml  verify_ablation_1k.yaml  verify_full.yaml
notebooks/: sklearn_vs_splade_comparison.ipynb  splade_sklearn_benchmark.ipynb
sae_classifier/: __init__.py  adaptive.py  benchmark.py  data.py  interpretability_benchmark.py  interventions.py  models.py
scripts/: __init__.py  eval.py  evaluate.py  reproduce_results.sh  train.py
spalf/: checkpoint.py  config.py  constants.py  training.py
splade/: inference.py  intervene.py  pipelines.py
splade_classifier/: __init__.py  __main__.py  adaptive.py  benchmark.py  faithfulness.py  interpretability_benchmark.py  kernels.py  models.py
splade_classifier.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  adversarial.py  analyze_sae.py  benchmark.py  checkpoint.py  config.py  constants.py  constraints.py  data.py  extract_vectors.py  faithfulness.py  initialization.py  interpretability_benchmark.py  kernel.py  kernels.py  models.py  profile_comparison.py  profile_ops.py  regularizers.py  run_beir_eval.py  runtime.py  sae.py  train.py  train_sae.py
tests/: conftest.py  test_adversarial.py  test_baselines.py  test_circuits.py  test_concept_analysis.py  test_data.py  test_faithfulness.py  test_gate.py  test_integration.py  test_kernels.py  test_layerwise.py  test_models.py  test_no_hidden_controls.py  test_sequence_model.py  test_splade_adapters.py  test_yaml_configs_load.py
(+205 files in other folders)
