[build-system]
requires = ["setuptools==80.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lexical-sae"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "captum==0.8.0",
    "datasets==4.5.0",
    "lime==0.2.0.1",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "concept-erasure==0.3.0",
    "schedulefree==1.4.0",
    "torch==2.9.1",
    "transformers==4.57.6",
    "tqdm==4.67.1",
]

[project.scripts]
lexical-sae = "cajt.scripts.run:main"

[project.optional-dependencies]
dev = ["pytest==8.3.5"]

[tool.pytest.ini_options]
markers = ["slow: tests requiring network access (deselect with '-k not slow')"]

[tool.setuptools.packages.find]
include = ["cajt*"]
