[project]
name = "spalf"
version = "0.1.0"
description = "SPALF: Spectrally-Preconditioned Augmented Lagrangian on Stratified Feature Manifolds"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4,<3.0",
    "transformers>=4.40,<5.0",
    "transformer_lens>=2.0,<3.0",
    "datasets>=3.0,<4.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "pyyaml>=6.0,<7.0",
    "tqdm>=4.60,<5.0",
    "triton>=3.0,<4.0",
    "safetensors>=0.4,<1.0",
    "accelerate>=1.0,<2.0",
]

[project.scripts]
spalf-train = "scripts.train:main"
spalf-eval = "scripts.evaluate:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*", "scripts*"]
